# mynewproject

./: .env  .gitattributes  README.md  device_connection.py  encryption.key  pyproject.toml  requirements-dev.txt  requirements.txt  run_dev.sh  server_temp.py  server_temp2.py  setup.py  start_server.sh  stop.sh
adapters/: dns_adapter.py  http_adapter.py  mqtt_adapter.py
config/: config.yaml  config.yaml.example  consolidated_config.yaml  database.yaml  device.yaml  gsm_config.yaml  gsm_protocols.yaml  gsm_ss7_config.yaml  monitoring.yaml  osint_config.yaml  protocols.yaml  security.yaml  tool_config.yaml
data/db/: WiredTiger  WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-3459860461960472813.wt  collection-12-5876469639786577058.wt  collection-2-3459860461960472813.wt  collection-28-5876469639786577058.wt  collection-39-5876469639786577058.wt  collection-4-3459860461960472813.wt  index-1-3459860461960472813.wt  index-13-5876469639786577058.wt  index-14-5876469639786577058.wt  index-15-5876469639786577058.wt  index-29-5876469639786577058.wt  sizeStorer.wt  (+7 more)
docs/: README.md
logs/: mongodb.log.2025-05-24T19-17-18  mongodb.log.2025-05-24T19-18-02  mongodb.log.2025-05-24T19-18-21  mongodb.log.2025-05-24T19-18-32
scripts/: backup_db.py  decrypt_encryption_key.py  health_check.py  init_db.py  init_gsm_ss7.py  secure_encryption_key.py  utils.sh  validate_config.py
templates/: agents.html  base.html  connections.html  dashboard.html  forgot_password.html  login.html  mobile.html  monitoring.html  osint.html  settings.html  shodan.html  tools.html
(+37 files in other folders)
