[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsm_ss7_monitor"
version = "1.0.0"
description = "GSM/SS7 Monitoring System"
authors = [
    { name="B13", email="b13@example.com" }
]
requires-python = ">=3.8"
dynamic = ["classifiers"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["src"]
exclude = ["tests", "docs"]
